--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "YouTube Safety Inspector",
-  "version": "1.0.0",
-  "description": "Analyzes YouTube videos for potentially dangerous or misleading content",
+  "version": "1.1.0",
+  "description": "Analyzes YouTube videos for potentially dangerous or misleading content, AI detection, and suggests safe alternatives",
   "permissions": [
     "activeTab",
     "storage"
