--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -15,6 +15,9 @@
     "http://127.0.0.1:8000/*",
     "https://127.0.0.1:8000/*"
   ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
