--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "youtube-safety-inspector"
-version = "2.1.0"
+version = "3.0.1"
 description = "Backend API for the YouTube Safety Inspector Chrome extension"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -26,8 +26,8 @@ dev = [
     "pytest-cov==7.0.0",
 ]
 ai = [
-    "openai==1.12.0",
-    "anthropic==0.18.0",
+    "openai>=1.12.0",
+    "anthropic>=0.18.0",
 ]
 db = [
     "sqlalchemy==2.0.25",
