--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,9 +10,9 @@ pytest==8.4.2
 pytest-asyncio==1.3.0
 pytest-cov==7.0.0
 
-# Optional: AI Analysis (uncomment if using)
-# openai==1.12.0
-# anthropic==0.18.0
+# AI Analysis (context review for false positive elimination)
+openai>=1.12.0
+anthropic>=0.18.0
 
 # Optional: Database (for production)
 # sqlalchemy==2.0.25
