--- a/extension/manifests/manifest.firefox.json
+++ b/extension/manifests/manifest.firefox.json
@@ -3,6 +3,12 @@
   "name": "YouTube Safety Inspector",
   "version": "3.0.1",
   "description": "Analyzes YouTube videos for potentially dangerous or misleading content, AI detection, and suggests safe alternatives",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "youtube-safety-inspector@beautifulplanet",
+      "strict_min_version": "109.0"
+    }
+  },
   "permissions": [
     "activeTab",
     "storage"
@@ -10,7 +16,10 @@
   "host_permissions": [
     "https://www.youtube.com/*",
     "https://youtube.com/*",
-    "https://*.beautifulplanet.dev/*"
+    "http://localhost:8000/*",
+    "https://localhost:8000/*",
+    "http://127.0.0.1:8000/*",
+    "https://127.0.0.1:8000/*"
   ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'; frame-src https://www.youtube.com https://www.youtube-nocookie.com"
@@ -57,7 +66,7 @@
     }
   ],
   "background": {
-    "service_worker": "background/background.js"
+    "scripts": ["background/background.js"]
   },
   "icons": {
     "16": "icons/icon16.png",
