ci: 3-job workflow, Docker env vars, new safety signatures
- Upgraded ci.yml: backend-tests + frontend-tests + docker jobs
- Added ANTHROPIC_API_KEY, AI_PROVIDER, API_SECRET_KEY to docker-compose.yml
- Fixed duplicate OPENAI_API_KEY in .env.example
- Added .agent/ to .gitignore
- Added 4 new safety-db signatures (occult, pop culture, pseudohistorical, spiritual)

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,15 @@
 # Get one at: https://console.cloud.google.com/apis/credentials
 YOUTUBE_API_KEY=your-youtube-api-key-here
 
-# Optional: OpenAI API Key (for future AI analysis features)
+# AI Context Review — eliminates false positives on debunking/educational content
+# Set ONE of these for near-perfect accuracy. Without either, heuristic fallback is used.
 # OPENAI_API_KEY=your-openai-key-here
+# ANTHROPIC_API_KEY=your-anthropic-key-here
+
+# AI Provider: "auto" (default), "openai", "anthropic", or "heuristic" (no API calls)
+# AI_PROVIDER=auto
+
+# Optional: Vision analysis requires OPENAI_API_KEY (above) + yt-dlp + ffmpeg installed
 
 # Optional: Chrome Extension ID(s) for CORS lockdown (comma-separated)
 # Get your ID from chrome://extensions after loading the extension
