--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  backend-tests:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -27,11 +27,31 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests with coverage
-        run: python -m pytest -q
+        run: python -m pytest tests/ -q --tb=short --cov=. --cov-report=term-missing -o "addopts="
+
+      - name: Check coverage threshold
+        run: python -m pytest tests/ -q --cov=. --cov-fail-under=50 -o "addopts=" --no-header
+
+  frontend-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run frontend tests
+        run: npm run test:frontend
 
   docker:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [backend-tests]
 
     steps:
       - uses: actions/checkout@v4
